--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "url": "https://github.com/thaole4416/t-webpack/issues"
   },
   "homepage": "https://github.com/thaole4416/t-webpack#readme",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
     "mini-css-extract-plugin": "^0.11.2",
     "style-loader": "^1.2.1",
-    "webpack": "^4.44.2"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
